# plotters-gtk-demo

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: main.rs  ui.glade  ui.xml
src/gaussian_plot/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs  ui.xml
