[package]
name = "plotters-gtk-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.16"
gtk = { package = "gtk4", version = "0.5" }
gio = "0.16"

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters"
default_features = false
features = ["surface_series"]

[dependencies.plotters-cairo]
git = "https://github.com/sdroege/plotters-cairo"
branch = "cairo-rs-0.16"
